--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,12 +8,12 @@
 body {
     margin: 0;
     min-height: 100%;
-    position: relative;
+    /* position: relative; */
 }
 
 html {
     min-height: 100%;
-    position: relative;
+    /* position: relative; */
 }
 
 
@@ -28,7 +28,7 @@ html {
     justify-content: space-between;
     align-items: center;
     opacity: 0.75;
-    z-index: 1000;
+    /* z-index: 1000; */
   }
   
   .developerLink {
